# joyce-custom

./: ChangeLog  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
765/: Makefile.in
765/include/: Makefile.in
765/lib/: Makefile.in
Docs/: Makefile.am  Makefile.in  anne.lyx  anne.txt  hardware.txt  joyce.lyx  joyce.txt
LibDsk/: ChangeLog  Makefile.in
LibDsk/doc/: libdsk.txt
LibDsk/include/: Makefile.in  libdsk.h
LibDsk/lib/: Makefile.am  Makefile.in  drvposix.c
LibDsk/tools/: Makefile.in
LibLink/: Makefile.in
LibLink/examples/: Makefile.in
LibLink/include/: Makefile.in  liblink.h
LibLink/lib/: Makefile.in
LibLink/lib/uk/co/demon/seasip/liblink/: LibLink.java  LibLinkException.java
SdSdl/: Makefile.in  fontdef.h  isin.cc  monobj.cc  opttdraw.cc
SdlTerm/: Makefile.in  SdlContext.cxx  SdlContext.hxx  SdlTerm.hxx  SdlTermInput.cxx  SdlTermOutput.cxx  SdlVt52.cxx  SdlVt52.hxx  cnvshell.c  cnvshell.h  psf2inc.c  psflib.c  psflib.h  psfutil1.c  psfutil2.c  psfutil3.c  psfutils.h
Xbm/: Makefile.in  hatches.xbm
cpmredir/: Makefile.in
cpmredir/doc/: README
cpmredir/include/: Makefile.in  cpmredir.h
cpmredir/lib/: Makefile.in
setup/: joyce.nsi
share/: Makefile.in
